@@ -20,4 +20,4 @@ MAP1    0   2   4   6   8  10  12  14  16  18  20  22  24  26  28  30 \
       120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 127
 
 # send MIDI event with mapped velocity value
-EVENT_KB id=1  type=NoteOn key_transpose=0 range=map1  lcd_pos=1:1:1 label="Note %N %3d%B"
+EVENT_KB id=1  type=NoteOn chn=1 key=any use_key_number=1 range=0:127  kb_velocity_map=map1  kb_transpose=0  lcd_pos=1:1:1 label="Note %n"
